fix ball overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -508,6 +508,9 @@ body,
   color: #FFFFFF;
   background-color: #491CDF; }
 
+@media screen and (min-width: 60em) {
+  main {
+    overflow: hidden; } }
 h1, h2, h3,
 blockquote > p, h4, h5, h6 {
   line-height: 1.2;
