--- a/source/_sass/elements/_pages.scss
+++ b/source/_sass/elements/_pages.scss
@@ -51,5 +51,7 @@ body,
 }
 
 @media screen and (break(medium)) {
-
+  main{
+    overflow: hidden;
+  }
 }
